# Compiling-Techniques

./: CMakeLists.txt  README.md
src/: MacroGenerator.cpp  MacroGenerator.h  MacroLibrary.cpp  MacroLibrary.h  TestModule.cpp  TestModule.h  main.cpp
test_files/: test_1.txt  test_10.txt  test_11.txt  test_12.txt  test_13.txt  test_14.txt  test_15.txt  test_2.txt  test_3.txt  test_4.txt  test_7.txt  test_8.txt  test_9.txt
